--- a/ionic/bower.json
+++ b/ionic/bower.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "signature_pad": "^1.5.2",
-    "jspdf-plugins": "jsPDF-plugins#*"
+    "jspdf-plugins": "jsPDF-plugins#*",
+    "underscore": "~1.8.3",
+    "jspdf": "~1.2.61"
   }
 }
